CB-25784: Allow OS upgrade from the UI when only the current image is available